--- a/src/app/component/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
+++ b/src/app/component/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
@@ -16,6 +16,10 @@
           <a class="nav-link" [class.active]="strRuta == '/admin/usuario/plist'"
             href="/admin/usuario/plist">Usuarios</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" [class.active]="strRuta == '/login'"
+            href="/login">Iniciar Sesion</a>
+        </li>
       </ul>
 
     </div>
